--- a/podfile
+++ b/podfile
@@ -9,11 +9,8 @@ pod 'IQKeyboardManager'
 pod 'Reachability'
 pod 'StreamingKit'
 pod 'ReactiveObjC'
-# 集成微信(完整版14.4M)
-pod ‘UMengUShare/Social/WeChat'
-# 集成QQ/QZone/TIM(完整版7.6M)
-pod ‘UMengUShare/Social/QQ'
-# 集成新浪微博(完整版25.3M)
+pod 'UMengUShare/Social/ReducedWeChat'
+pod ‘UMengUShare/Social/ReducedQQ'
 pod ‘UMengUShare/Social/Sina'
 pod 'FMDB'
 end
