--- a/KeTing/Info.plist
+++ b/KeTing/Info.plist
@@ -121,6 +121,10 @@
 	<string>是否允许可听使用您的相机？</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>是否允许可听使用您的相册？</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
